; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/beri/virtio/extr_virtio.c_getcopy.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/beri/virtio/extr_virtio.c_getcopy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iovec = type { i32, i32 }

@M_DEVBUF = common dso_local global i32 0, align 4
@M_NOWAIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.iovec* @getcopy(%struct.iovec* %0, i32 %1) #0 {
  %3 = alloca %struct.iovec*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.iovec*, align 8
  %6 = alloca i32, align 4
  store %struct.iovec* %0, %struct.iovec** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = sext i32 %7 to i64
  %9 = mul i64 %8, 8
  %10 = trunc i64 %9 to i32
  %11 = load i32, i32* @M_DEVBUF, align 4
  %12 = load i32, i32* @M_NOWAIT, align 4
  %13 = call %struct.iovec* @malloc(i32 %10, i32 %11, i32 %12)
  store %struct.iovec* %13, %struct.iovec** %5, align 8
  store i32 0, i32* %6, align 4
  br label %14

14:                                               ; preds = %41, %2
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %4, align 4
  %17 = icmp slt i32 %15, %16
  br i1 %17, label %18, label %44

18:                                               ; preds = %14
  %19 = load %struct.iovec*, %struct.iovec** %3, align 8
  %20 = load i32, i32* %6, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.iovec, %struct.iovec* %19, i64 %21
  %23 = getelementptr inbounds %struct.iovec, %struct.iovec* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.iovec*, %struct.iovec** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.iovec, %struct.iovec* %25, i64 %27
  %29 = getelementptr inbounds %struct.iovec, %struct.iovec* %28, i32 0, i32 1
  store i32 %24, i32* %29, align 4
  %30 = load %struct.iovec*, %struct.iovec** %3, align 8
  %31 = load i32, i32* %6, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.iovec, %struct.iovec* %30, i64 %32
  %34 = getelementptr inbounds %struct.iovec, %struct.iovec* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.iovec*, %struct.iovec** %5, align 8
  %37 = load i32, i32* %6, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds %struct.iovec, %struct.iovec* %36, i64 %38
  %40 = getelementptr inbounds %struct.iovec, %struct.iovec* %39, i32 0, i32 0
  store i32 %35, i32* %40, align 4
  br label %41

41:                                               ; preds = %18
  %42 = load i32, i32* %6, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %6, align 4
  br label %14

44:                                               ; preds = %14
  %45 = load %struct.iovec*, %struct.iovec** %5, align 8
  ret %struct.iovec* %45
}

declare dso_local %struct.iovec* @malloc(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
